# SO-Project-2

./: CMakeLists.txt  README.md
fs/: operations.c  operations.h
manager/: manager.c  manager.h  protocol_manager.c  protocol_manager.h
mbroker/: box_list.c  box_list.h  default_sizes.h  mbroker.c  protocol_mbroker.c  protocol_mbroker.h  request_handler.c  request_handler.h
producer-consumer/: producer-consumer.c
protocol/: codes.h  default_sizes.h  parser.c  parser.h  protocol.c  protocol.h
publisher/: pub.c
subscriber/: sub.c
utils/: fifo.c  fifo.h
